Fluffy Manager 5000対応

--- a/MHRiseModManager/Properties/Settings.settings
+++ b/MHRiseModManager/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="TempDirectoryName" Type="System.String" Scope="User">
       <Value Profile="(Default)">MHRiseModManager</Value>
     </Setting>
+    <Setting Name="ImageCacheDirectoryName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">ImageCache</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
