--- a/MHRiseModManager/MHRiseModManager.csproj
+++ b/MHRiseModManager/MHRiseModManager.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="ReactiveProperty" Version="8.0.3" />
     <PackageReference Include="ReactiveProperty.WPF" Version="8.0.3" />
     <PackageReference Include="SevenZipSharp.Net45" Version="1.0.19" />
+    <PackageReference Include="SharpCompress" Version="0.30.1" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.115.5" />
   </ItemGroup>
 
