--- a/MHRiseModManager/Properties/Settings.settings
+++ b/MHRiseModManager/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="ImageCacheDirectoryName" Type="System.String" Scope="User">
       <Value Profile="(Default)">ImageCache</Value>
     </Setting>
+    <Setting Name="BackUpDirectoryName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">BackUpCache</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
