--- a/MHRiseModManager/MHRiseModManager.csproj
+++ b/MHRiseModManager/MHRiseModManager.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
 
   <ItemGroup>
