--- a/MHRiseModManager/MHRiseModManager.csproj
+++ b/MHRiseModManager/MHRiseModManager.csproj
@@ -22,6 +22,8 @@
     <PackageReference Include="ReactiveProperty.WPF" Version="8.0.3" />
     <PackageReference Include="SevenZipSharp.Net45" Version="1.0.19" />
     <PackageReference Include="SharpCompress" Version="0.30.1" />
+    <PackageReference Include="SqlKata" Version="2.4.0" />
+    <PackageReference Include="SqlKata.Execution" Version="2.4.0" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.115.5" />
   </ItemGroup>
 
